<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width_340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/linear_layout_margin_100dp"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding_30dp">

        <TextView
            android:text="@string/login_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_signup_main_40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_textview_email"
            android:hint="@string/login_textview_email"
            android:digits="@string/edittext_default"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:padding="12dp"
            style="@style/EditTextStyle" />

        <EditText
            android:id="@+id/login_textview_password"
            android:hint="@string/login_textview_password"
            android:digits="@string/edittext_default"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:padding="12dp"
            style="@style/EditTextStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/button_main"
        android:text="@string/login_button_main"
        android:layout_width="@dimen/button_width_320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/main_active_button_margin_140dp"
        style="@style/MainButtonStyle" />

    <TextView
        android:id="@+id/main_textview_to_login"
        android:text="@string/acc_textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/textview_margin_100dp"
        style="@style/LogInButtonStyle" />

</FrameLayout>
